Fixes issue with navigation overlay being smaller than the actual navigation on tablet and mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -233,7 +233,9 @@ button.btn {
 /* ===============================
    EXTENDED NAVIGATION
    =============================== */
-
+.widget.extendednavigation .bk-overlay {
+	width: 100%;
+}
 
 .widget {
     &.extendednavigation {
